2004-02-02  Mike Kestner  <mkestner@ximian.com>

	* glib/Value.cs : add dispose queue and idle handler so we can
	unset GValues that are created by the binding ctors.
	[Fixes #53490]

2004-02-02  Todd berman  <tberman@sevenl.net>

	* gdk/Event*.custom: added fix for bug #53729.

2004-01-30  Todd Berman  <tberman@sevenl.net>

	* gtk/Gtk.metadata: out fix for TreeView.GetBackgroundArea and
	TextView.GetIterLocation.
	* gtk/gtk-api.xml: regen

2004-01-29  Mike Kestner  <mkestner@ximian.com>

	* glib/time_t_CustomMarshaler.cs : new custom marshaler form time_t.
	* glue/time_t.c : glue for time_t.
	* glue/Makefile.am : add time_t.c
	* glue/makefile.win32 : ditto

2004-01-28  John Luke  <jluke@cfl.rr.com>

	* glade/XML.custom : some null checking for crash prevention.
	[Fixes #47017]

	* sample/VteTest.cs: update
	* vte/Vte.metadata: remove incorrect rules
	* vte/vte-api.xml: regen

2004-01-28  Mike Kestner  <mkestner@ximian.com>

	* gtk/gtk-api.xml : regen
	* parser/gapi2xml.pl : fix signals parsing where a STRUCT_OFFSET
	is not present in the signal_new call.
	* parser/gapi_pp.pl : ignore #ident lines.
	* vte/vte-api.xml : regen
	[Fixes #53189]

2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* gtk/SelectionData.custom : guard against null in get_Text.
	[Fixes #52713]

2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* glue/selectiondata.c : expose data field.
	* gtk/SelectionData.custom : add Data property.
	[Fixes #53397]

2004-01-27  John Luke  <jluke@cfl.rr.com>

	* gtk/AccelKey.custom: add convenience ctor
	* gtk/Gtk.metadata: revert previous Widget.AddAccelerator change,
	fix AccelKey fields
	* gtk/Widget.custom: add overload for AddAccelerator
	* gtk/gtk-api.xml: regen
	
2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* glib/Value.cs : only g_free values we allocate.
	[Fixes #51180]

2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* glib/TypeConverter.cs : lookup GTypes for boxed value types.
	* glib/Value.cs : fix boxed type handling in object ctor.