@@ -1,3 +1,13 @@
+2004-02-02  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* generator/ClassBase.cs: Converted String uses to the string alias.
+	* generator/ConstStringGen.cs: Ditto
+	* generator/Ctor.cs: Ditto
+	* generator/EnumGen.cs: Ditto
+	* generator/ManualGen.cs: Ditto
+	* generator/SignalHandler.cs: Ditto
+	* generator/StringGen.cs: Ditto
+
 2004-02-02  Mike Kestner  <mkestner@ximian.com>
 
 	* glib/Value.cs : add dispose queue and idle handler so we can
